app/styles/main.less
@import 'bootstrap.less';

@font-face {
  font-family: 'Vollkorn';
  font-style: italic;
  font-weight: 400;
  src: local('Vollkorn Italic'), url(http://themes.googleusercontent.com/static/fonts/vollkorn/v4/Oiz0tNwvC-Nd29SBQWfWTL3hpw3pgy2gAi-Ip7WPMi0.woff) format('woff');
}

@font-face {
  font-family: 'Montserrat';
  font-style: normal;
  font-weight: 400;
  src: local('Montserrat-Regular'), url(http://themes.googleusercontent.com/static/fonts/montserrat/v4/zhcz-_WihjSQC0oHJ9TCYL3hpw3pgy2gAi-Ip7WPMi0.woff) format('woff');
}

@font-face {
  font-family: 'Montserrat';
  font-style: normal;
  font-weight: 700;
  src: local('Montserrat-Bold'), url(http://themes.googleusercontent.com/static/fonts/montserrat/v4/IQHow_FEYlDC4Gzy_m8fcnbFhgvWbfSbdVg11QabG8w.woff) format('woff');
}

* {
  cursor: default;
}

html {
  overflow-y: scroll;
  overflow-x: hidden;
  font-size: 10px;

  @media(min-width: 1025px) {
    font-size: calc(100vw * 0.0078125);
  }
}

html, body {
  height: 100%;
}

body {
  text-align: center;
  background: hsla(0, 10%, 98%, 1);
  background: hsla(54, 100%, 55%, .7);
  background: hsla(52, 100%, 55%, .1);
  color: #111;
  max-width: 100vw;
  overflow-x: hidden;
}

.content {
  height: 100%;
  position: relative;
  opacity: 0;
  transition: all 1.5s;
}

/*
 * Title
 */
.title-wrap {
  position: relative;
  display: flex;
  justify-content: center;
  padding: (3rem * 2.5) 0 (3rem * 1.5);

  .title {
    font-family: "Montserrat";
    display: block;
    position: absolute;
    font-weight: bold;
    font-size: (3rem * 1.25);
    line-height: 1;
    bottom: 0;
    left: 0;
    right: 0;
    transition: all .25s;
  }
}

/*
 *Dots
 */
.dots {
  display: inline-flex;
  position: relative;
  justify-content: center;
  line-height: 1;
  transform: translateZ(0);

  .dot {
    display: flex;
    position: absolute;
    justify-content: center;
    align-items: center;
    height: 1px;
    width: 1px;
    font-size: 1rem;
    line-height: 1;
    left: 0;
    right: 0;
    margin: auto;
  }

  .dot-before {
    top: -1px;
  }

  .dot-after {
  }
}

/*
 * Nav
 */
.nav {
  opacity: 1;
  display: block;
  z-index: 100;
  font: 700 2.5rem/1 Montserrat, @font-family-sans-serif;
  list-style: none;
  text-align: center;
  padding: 0;
  padding-top: (3rem * 3);
  margin: (0) 0 (0);
  user-select: none;

  li {
    display: inline-block;
    position: relative;
    cursor: pointer;
    margin: 0 auto;
    left: 0; right: 0;
    user-select: none;
    opacity: 0;
    transform: scale(0);
    transition: all .25s;

    .dots {
      cursor: pointer;
    }
  }

  .btn-contact {
    font-size: 1.5rem;
    margin-top: 1rem;
    user-select: none;
  }
}

/*
 *Divider
 */
.divider {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 1px;
  height: 1px;
  margin: (2.5rem * 3) auto (2.5rem * .5);
  position: relative;
  z-index: -100;
}

/*
 *Invert
 */
.invert {
  position: absolute;
  width: 50%;
  height: 100%;
  right: 0;
  bottom: 0;
  -webkit-backdrop-filter: invert(100%);
  z-index: 100;
  pointer-events: none;
  display: none;
}

/*
 * Pages
 */
.page-wrap {
  margin: (0) 0 0;
  position: relative;
  z-index: 0;
}

@media screen and (max-width: 480px) {
  .page.page-intro {
    margin: 0 3.3rem;
  }
}

.page {
  left: 0;
  top: 0;
  display: block;
  position: absolute;
  text-align: center;
  z-index: -100;
  left: 0; right: 0;
  transition: opacity 0.15s;
  font: italic 2.2rem/1.5 Vollkorn, @font-family-serif;
  margin: 0 auto;
}

.page-skills {
  max-width: 30rem;
  .sans   { font: normal 1.8rem/1.5 Montserrat, @font-family-sans-serif; }
  .serif  { font: italic 1.6rem/1.5 Vollkorn, @font-family-serif; }
  .inline { width: 50%; float: left; }
}

.page-work {
  overflow: visible;
  .sans   { font: bold 1.8rem/1.5 Montserrat, @font-family-sans-serif; }
  .serif { font: italic 2.2rem/1.5 Vollkorn, @font-family-serif; }
  .more  { font: bold 2.2rem/1.5 Montserrat, @font-family-sans-serif; margin-top: 3.6rem; opacity: 1; display: inline-block; }
}

.page-work a { display: block; }

/*
 * Char specifics
 */
a {
  color: #111;
  cursor: pointer;
  text-decoration: none;
  &:link, &:visited, &:hover,
  &:active, &focus {
    color: #111;
    outline: none;
    -moz-outline-style: none;
  }
  .char {
    background: transparent;
    cursor: pointer;
    word-break: break-all;
  }
}

.word {
  display: inline-block;
  &:after {
    content: '\00a0';
    display: inline-block;
    position: relative;
  }
}

.char {
  display: inline-block;
  background: transparent;
  cursor: text;
  z-index: -1;
}

.split { margin: 0 auto; }
.break { margin-bottom: 1rem; }

